# simple_game_engine

./: .gitignore  CMakeLists.txt  README.md
engine/: .vbo.hxx.~undo-tree~  CMakeLists.txt  engine.cxx  engine.hxx  gl_assist.hxx  glad.c  glad.h  object2d.cxx  object2d.hxx  shader.cxx  shader.hxx  stuff.cxx  stuff.hxx  texture2d.cxx  texture2d.hxx  vbo.cxx  vbo.hxx
engine/include/: engine.hxx  input_handler.hxx  om_gl_check.hxx  shader.hxx  stuff.hxx  texture2d.hxx  vbo.hxx
engine/include/glad/: glad.c  glad.h
engine/src/: engine.cxx  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  input_handler.cxx  shader.cxx  stuff.cxx  texture2d.cxx  vbo.cxx
examples/: CMakeLists.txt  command.hxx  game.cxx  game_object.cxx  game_object.hxx  gpp_2_design_command.cxx  opengl_2-6_texture.cxx  opengl_2-7_transform.cxx  pattern_command.cxx  pattern_command.hxx  test_vbo.cxx
laba/: CMakeLists.txt  lab1_cosi.cxx
res/: 3d_cube.txt  rgb_triangle.txt  rgb_triangle_1.txt  rgb_triangle_v_6.txt  rgba_square.txt  square.txt  tank_1_0.txt  tank_1_1.txt  vertexes.txt  vertexes_tank.txt  vertexes_v_3.txt
res/shaders/: 1_shader.fs  1_shader.vs  default_shader.fs  default_shader.vs  default_shader_.fsh  default_shader_v_8.fs  default_shader_v_8.vs  default_texture_shader_v_8.fs  default_texture_shader_v_8.vs  glm_txt_sh.fs  glm_txt_sh.vs  grid_shader.fs  grid_shader.vs  r_txt.fs  r_txt.vs  shader_double_tex_v_8.fs  shader_transform_v_8.vs  shader_v_3.fs  shader_v_3.vs  shader_v_3_no_version.fs  shader_v_3_no_version.vs  shader_v_6.vs  shader_v_8.fs  shader_v_8.vs
test_game/: CMakeLists.txt  abba.cxx  game.cxx  opengl_2-6_texture.cxx  opengl_2-7_transform.cxx
